styles.css
html {
  font-size: 16px; 
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", serif;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  width: 100%;
  background: url(images/bg-intro-desktop.png);
  background-color: hsl(0, 100%, 74%);
}

main {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 70%;
}

.text-content, .form-section {
  width: 45%;
}

h1 {
  font-size: 3.3rem;
  color: white;
  line-height: 3.5rem;
  margin-bottom: 1.7rem;
}

.text-content p {
  color: white;
}

.trial-div {
  color: white;
  background-color: hsl(248, 32%, 49%);
  text-align: center;
  padding: 0.5rem 0.2rem;
  border-radius: 0.4rem;
  box-shadow: 0 0.35rem 0 rgba(0, 0, 0, 0.2);
  margin-bottom: 1rem;
  font-weight: 400;
}

.bold {
  font-weight: 600;
}

.form-box {
  background-color: white;
  border-radius: 0.4rem;
  display: flex;
  flex-direction: column;
  padding: 1.8rem 1.5rem;
  gap: 0.8rem;
  box-shadow: 0 0.35rem 0 rgba(0, 0, 0, 0.2);
}

input {
  padding-left: 1rem;
  height: 2.5rem;
  border-radius: 0.2rem;
  border: 1px solid rgb(183, 183, 183);
  font-weight: 500;
}

input:focus {
  border: 1px solid hsl(248, 32%, 49%);
  outline: none;
}

.submit-btn {
  background-color: hsl(154, 59%, 51%);
  color: white;
  text-transform: uppercase;
  font-weight: 500;
  height: 2.5rem;
  border-radius: 0.2rem;
  box-shadow: 0 0.2rem 0 rgb(66, 179, 134);
  border: none;
  cursor: pointer;
}

.agreement-text {
  font-size: 0.6rem;
  text-align: center;
  font-weight: 500;
  color: rgb(183, 183, 183);
}

.terms {
  font-weight: 700;
  color: hsl(0, 100%, 74%);
  cursor: pointer;
}

